; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_query_on_answer.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_query_on_answer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_query = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 (i8**, i8**)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @query_on_answer(%struct.rpc_query* %0) #0 {
  %2 = alloca %struct.rpc_query*, align 8
  %3 = alloca i32, align 4
  store %struct.rpc_query* %0, %struct.rpc_query** %2, align 8
  %4 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %5 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %4, i32 0, i32 1
  %6 = call i32 @remove_event_timer(i32* %5)
  store i32 0, i32* %3, align 4
  %7 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %8 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %9, align 8
  %11 = icmp ne i32 (i8**, i8**)* %10, null
  br i1 %11, label %12, label %25

12:                                               ; preds = %1
  %13 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %14 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %15, align 8
  %17 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %18 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32 (i8**, i8**)*, i32 (i8**, i8**)** %19, align 8
  %21 = bitcast i32 (i8**, i8**)* %20 to i8**
  %22 = getelementptr inbounds i8*, i8** %21, i64 1
  %23 = bitcast %struct.rpc_query** %2 to i8**
  %24 = call i32 %16(i8** %22, i8** %23)
  store i32 %24, i32* %3, align 4
  br label %28

25:                                               ; preds = %1
  %26 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %27 = call i32 @default_on_answer(%struct.rpc_query* %26)
  br label %28

28:                                               ; preds = %25, %12
  %29 = load i32, i32* %3, align 4
  %30 = icmp sle i32 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %28
  %32 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %33 = call i32 @delete_rpc_query(%struct.rpc_query* %32)
  br label %34

34:                                               ; preds = %31, %28
  ret void
}

declare dso_local i32 @remove_event_timer(i32*) #1

declare dso_local i32 @default_on_answer(%struct.rpc_query*) #1

declare dso_local i32 @delete_rpc_query(%struct.rpc_query*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
